--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,15 @@ author:
   name: pntbr
   email: stephane@pntbr.fr
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Un petit outil simple pour présenter et gérer la programmation d'évènements
 baseurl: "/programmation" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  pntbr
+
+collections:
+  events:
+    output: true
+    sort_by: date_debut
 
 # Build settings
 markdown: kramdown
