--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ baseurl: "/programmation" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  pntbr
 
+show_excerpts: true
+
 collections:
   events:
     output: true
