--- a/_config.yml
+++ b/_config.yml
@@ -1,26 +1,11 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: Terre Pure
 author:
   name: pntbr
   email: stephane@pntbr.fr
-description: >- # this means to ignore newlines until "baseurl:"
+description: >-
   Un petit outil simple pour présenter et gérer la programmation d'évènements
-baseurl: "/programmation" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/programmation"
+url: ""
 github_username:  pntbr
 
 show_excerpts: true
@@ -28,7 +13,17 @@ show_excerpts: true
 collections:
   events:
     output: true
-    sort_by: date_debut
+    sort_by: nom_animatrice
+  animations:
+    output: true
+    sort_by: nom_animatrice
+
+defaults:
+  - scope:
+      path: ""
+      type: events
+    values:
+      categorie: stage
 
 # Build settings
 markdown: kramdown
