ajoute un bouton réserver

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Terre Pure
 author:
-  name: Annick Petit
+  name: Annick
   email: associationterrepure@gmail.com
 description: >-
   Page de présentation de la programmation des évènements de l'association Terre Pure
