--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author:
   email: associationterrepure@gmail.com
 description: >-
   Page de présentation de la programmation des évènements de l'association Terre Pure
-baseurl: "/programmation"
+baseurl: ""
 url: ""
 github_username:  pntbr
 lang: fr
